@@ -1,4 +1,8 @@
 2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-get-attribute): new function
+
+2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 	* vc-clearcase.el (clearcase-revert-unchanged-files): new function
 
 	* ucm.el (ucm-actb-show-diff, ucm-actb-revert-command): don't use
